# sigma

./: CMakeLists.txt  buildrun.sh  main.c
